--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -8,17 +8,21 @@
 
 body {
   font-family: 'Red Hat Display',
-    sans-serif;
-    min-height: 100vh;
-    background-image: url(../images/pattern-background-desktop.svg);
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-size: contain;
-    background-color: hsl(225, 100%, 94%);
-    position: relative;
-    font-size: 16px;
-}
+  sans-serif;
+  min-height: 100vh;
+  background-image: url(../images/pattern-background-mobile.svg);
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-size: contain;
+  background-color: hsl(225, 100%, 94%);
+  position: relative;
+  font-size: 0.9375rem;
+  font-weight: 500;
 
+  @media only screen and (min-width: 768px) {
+    background-image: url(../images/pattern-background-desktop.svg);
+  }
+}
