--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,5 +1,5 @@
-@use "resets";
-@use "./globals";
-@use "./components/main";
-@use "./components/card";
-@use "./components/attribution";
+@use 'resets';
+@use './globals';
+@use './components/main';
+@use './components/card';
+@use './components/attribution';
