--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -7,8 +7,7 @@
 }
 
 body {
-  font-family: 'Red Hat Display',
-  sans-serif;
+  font-family: 'Red Hat Display', sans-serif;
   min-height: 100vh;
   background-image: url(../images/pattern-background-mobile.svg);
   background-repeat: no-repeat;
