--- a/src/assets/styles/components/attribution.scss
+++ b/src/assets/styles/components/attribution.scss
@@ -1,6 +1,9 @@
 .attribution {
-  font-size: 11px; text-align: center;
+  font-size: 11px;
+  text-align: center;
   margin-top: 25px;
   color: rgb(10, 10, 10);
 }
-.attribution a { color: hsl(228, 67%, 60%); }
+.attribution a {
+  color: hsl(228, 67%, 60%);
+}
